--- a/source/style/common/vars.scss
+++ b/source/style/common/vars.scss
@@ -1,3 +1,10 @@
+// Цвета
+$color_1: #004CD1; // Иконки соц. сетей, табы меню, кнопка обычная
+$color_2: #043EA3; // Табы меню (:hover)
+$color_3: #1056D1; // Шкала прогресса круговых диаграмм
+$color_4: #183669; // Фон меню
+$color_5: #083c96; // кнопка авторизации (:hover), описание проекта, футер
+
 // Круговые диаграммы
 $graph__d : 110; // Диаметр (px)
 $graph__sw : 20; // Толщина линии
@@ -5,3 +12,6 @@ $graph__r : ($graph__d / 2) - ($graph__sw / 2);
 $graph__x : $graph__d / 2;
 $graph__y : $graph__d / 2;
 $graph__p : 2 * 3.14 * $graph__r;
+
+// Другое
+$transition__time_fast: 0.1s;
