--- a/source/template/blog.jade
+++ b/source/template/blog.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	include common/_head
 	body
+	include common/_preloader
 	<!--[if lt IE 7]>
 	<p class="browsehappy">Вы используете <strong>устаревший</strong> браузер. Пожалуйста <a href="http://browsehappy.com/">обновите его</a></p>
 	<![endif]-->
