--- a/source/template/index.jade
+++ b/source/template/index.jade
@@ -2,10 +2,14 @@ doctype html
 html
 	include common/_head
 	body
+	include common/_preloader
+	// include common/_preloader
 	<!--[if lt IE 7]>
 	<p class="browsehappy">Вы используете <strong>устаревший</strong> браузер. Пожалуйста <a href="http://browsehappy.com/">обновите его</a></p>
 	<![endif]-->
 	.l-wrapper.l-wrapper_welcome
+		video(src="assets/img/night.webm", poster="assets/img/night.jpg", autoplay, preload="auto", loop).m-video
+		img(src="assets/img/mountains.png").l-parallax
 		a(href="#").m-login-button Авторизоваться
 		.l-card-container
 			.l-card
@@ -20,6 +24,8 @@ html
 							each address, social in socials
 								li.m-welcome__social-item(class="m-social__item_" + social)
 									a(href="#{address}").m-welcome__social-link
+										svg.m-welcome__social-icon
+											use(xmlns:xlink="http://www.w3.org/1999/xlink", xlink:href="assets/img/sprite.svg#" + social)
 					ul.m-tabs
 						li.m-tabs__item
 							a(href="works.html").m-tabs__link Мои работы
@@ -31,10 +37,12 @@ html
 					.m-login-form
 						.m-login-form__title Авторизуйтесь
 						.m-input
-							span.m-input__icon.m-input__icon_login
+							svg.m-input__icon.m-input__icon_password
+								use(xmlns:xlink="http://www.w3.org/1999/xlink", xlink:href="assets/img/sprite.svg#login")
 							input(type="text", placeholder="Логин").m-input__input.m-input__input_iconed
 						.m-input
-							span.m-input__icon.m-input__icon_password
+							svg.m-input__icon.m-input__icon_password
+								use(xmlns:xlink="http://www.w3.org/1999/xlink", xlink:href="assets/img/sprite.svg#password")
 							input(type="text", placeholder="Пароль").m-input__input.m-input__input_iconed
 						label.m-checkbox
 							input(type="checkbox").m-checkbox__input
