--- a/source/template/about.jade
+++ b/source/template/about.jade
@@ -8,6 +8,11 @@ html
 	<![endif]-->
 	include common/_menu
 	include common/_header
+	svg(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none").m-corner.m-corner_works
+		g.m-corner.m-corner_about-left
+			polygon(points="0,0   0,86   500.8,86   500.8,75.5")
+		g.m-corner.m-corner_about-right
+			polygon(points="1000,0   1000,86   500,86   500,75.5")
 	.l-wrapper.l-wrapper_flex
 		section.l-section.l-section_left
 			.m-title__container
