--- a/source/template/blog.jade
+++ b/source/template/blog.jade
@@ -8,6 +8,9 @@ html
 	<![endif]-->
 	include common/_menu
 	include common/_header_special
+	svg(xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1000 85" preserveaspectratio="none").m-corner.m-corner_blog
+		polygon(points="0,0   0,86   500.8,86   500.8,75.5")
+		polygon(points="1000,0   1000,86   500,86   500,75.5")
 	.l-wrapper.l-wrapper_flex
 		.l-blog
 			.l-blog__nav
